# corretto

./: Cargo.toml  README.md
corretto/: Cargo.toml  README.md
corretto/src/: jdk_desc.rs  version_info.rs
src/: cpu_arch.rs  ext.rs  jdk_desc.rs  lib.rs  os.rs  version_info.rs
